--- a/ts/package.json
+++ b/ts/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.15",
     "@types/lodash": "^4.14.182",
+    "tailwindcss": "^3.1.8",
     "less": "^4.1.2"
   },
   "peerDependencies": {
