--- a/ts/package.json
+++ b/ts/package.json
@@ -20,15 +20,16 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.5",
+    "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
     "@types/lodash": "^4.14.182",
     "tailwindcss": "^3.1.8",
     "less": "^4.1.2"
   },
   "peerDependencies": {
-    "@prisma/client": "^3.15.1",
+    "@prisma/client": "^4.2.1",
+    "prisma": "^4.2.1",
     "lodash": "^4.17.21",
-    "prisma": "^3.15.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
