--- a/ts/package.json
+++ b/ts/package.json
@@ -27,6 +27,7 @@
     "less": "^4.1.2"
   },
   "peerDependencies": {
+    "immer": "^9.0.14",
     "@prisma/client": "^4.2.1",
     "prisma": "^4.2.1",
     "lodash": "^4.17.21",
