--- a/ts/package.json
+++ b/ts/package.json
@@ -24,7 +24,8 @@
     "@types/react": "^18.0.15",
     "@types/lodash": "^4.14.182",
     "tailwindcss": "^3.1.8",
-    "less": "^4.1.2"
+    "less": "^4.1.2",
+    "tslib": "^2.4.0"
   },
   "peerDependencies": {
     "immer": "^9.0.14",
@@ -34,8 +35,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "tarat-connect": "*",
-    "tarat-core": "*",
-    "tarat-server": "*"
+    "tarat": "*"
   }
 }
