feat: upgrade to new signal

--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-tarat-unit",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "tarat": {},
   "description": "a tarat unit",
   "scripts": {
@@ -23,25 +23,26 @@
     "README.md"
   ],
   "dependencies": {
-    "tarat": "*"
+    "@polymita/connect": "*",
+    "@polymita/signal": "*",
+    "@polymita/signal-model": "*",
+    "@prisma/client": "^4.2.1",
+    "immer": "^9.0.14",
+    "lodash": "^4.17.21",
+    "prisma": "^4.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "tarat": "^0.0.74"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.5",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
-    "@types/lodash": "^4.14.182",
-    "tailwindcss": "^3.1.8",
+    "@types/react-dom": "^18.0.5",
     "less": "^4.1.2",
-    "tslib": "^2.4.0"
-  },
-  "peerDependencies": {
-    "immer": "^9.0.14",
-    "@prisma/client": "^4.2.1",
-    "prisma": "^4.2.1",
-    "lodash": "^4.17.21",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "tarat": "*"
+    "tailwindcss": "^3.1.8",
+    "tslib": "^2.4.0",
+    "typescript": "^5.0.2"
   }
 }
