feat: upgrade template with polymita

--- a/ts/package.json
+++ b/ts/package.json
@@ -33,7 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "tarat": "^0.0.74"
+    "tarat": "*"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
