--- a/ts/package.json
+++ b/ts/package.json
@@ -1,48 +1,66 @@
 {
-  "name": "my-tarat-unit",
-  "version": "1.0.1",
+  "name": "@polymita/channel-subscriber",
+  "version": "1.0.14",
   "tarat": {},
   "description": "a tarat unit",
   "scripts": {
-    "init": "pnpm i && npm run p:dev",
-    "dev": "tarat dev",
-    "build": "tarat build",
-    "start": "tarat start",
     "p:dev": "prisma migrate dev && prisma generate",
     "p:gen": "prisma generate",
+    "dev": "polymita dev",
+    "any": "polymita any",
+    "dev:next": "next dev",
+    "build": "polymita build",
+    "build:next": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "init": "pnpm i && npm run p:dev",
     "p:deploy": "prisma migrate deploy",
-    "p:studio": "prisma studio"
+    "p:studio": "prisma studio",
+    "test": "polymita test"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "prisma": {
     "schema": "./models/schema.prisma"
   },
   "files": [
     "dist",
-    "pacakge.json",
+    "package.json",
     "types",
     "README.md"
   ],
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "dependencies": {
-    "@polymita/connect": "*",
-    "@polymita/signal": "*",
-    "@polymita/signal-model": "*",
-    "@prisma/client": "^4.2.1",
-    "immer": "^9.0.14",
-    "lodash": "^4.17.21",
-    "prisma": "^4.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "tarat": "*"
+    "fast-xml-parser": "^4.2.4",
+    "showdown": "2.1.0",
+    "@polymita/connect": "workspace:^",
+    "@polymita/next-connect": "workspace:^",
+    "@polymita/next-server": "workspace:^",
+    "@polymita/renderer": "workspace:^",
+    "@polymita/signal": "workspace:^",
+    "@polymita/signal-model": "workspace:^",
+    "@prisma/client": "^5.10.2",
+    "next": "14.1.0",
+    "prisma": "^5.10.2",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.5",
-    "less": "^4.1.2",
-    "tailwindcss": "^3.1.8",
-    "tslib": "^2.4.0",
-    "typescript": "^5.0.2"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.11.1"
   }
 }
