--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es2016",
+    "target": "es2015",
     "useDefineForClassFields": false,
     "module": "esnext",
     "moduleResolution": "node",
@@ -12,13 +12,37 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "removeComments": false,
-    "jsx": "react",
-    "lib": ["esnext", "dom"],
-    "types": ["node"],
+    "jsx": "preserve",
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "types": [
+      "node"
+    ],
     "baseUrl": ".",
     "paths": {
-      "immer": ["node_modules/immer"],
-      "@/*": ["./*"]
-    }
-  }
+      "@/*": [
+        "./*"
+      ]
+    },
+    "skipLibCheck": true,
+    "strict": false,
+    "noEmit": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
