--- a/ts/package.json
+++ b/ts/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "@polymita/channel-subscriber",
-  "version": "1.0.14",
+  "name": "@polymita/basic-layout",
+  "version": "1.0.17",
   "tarat": {},
   "description": "a tarat unit",
+  "main": "dist/index.js",
   "scripts": {
     "p:dev": "prisma migrate dev && prisma generate",
     "p:gen": "prisma generate",
     "dev": "polymita dev",
     "any": "polymita any",
+    "zip": "polymita zip",
+    "upload": "polymita upload",
     "dev:next": "next dev",
     "build": "polymita build",
     "build:next": "next build",
-    "start": "next start",
+    "start": "polymita start",
     "lint": "next lint",
     "init": "pnpm i && npm run p:dev",
     "p:deploy": "prisma migrate deploy",
     "p:studio": "prisma studio",
-    "test": "polymita test"
+    "test": "polymita test",
+    "mirror": "cross-env-shell ELECTRON_MIRROR=https://npmmirror.com/mirrors/electron/ ELECTRON_BUILDER_BINARIES_MIRROR=https://npmmirror.com/mirrors/electron-builder-binaries/",
+    "pkg": "rm -rf release/build && npm run mirror && npm run release && electron-builder build --mac --win --publish never",
+    "release": "polymita release",
+    "eb": "electron-builder install-app-deps",
+    "prisma": "polymita prisma",
+    "local": "npm run zip && npm run upload"
   },
   "publishConfig": {
     "access": "public"
@@ -26,7 +35,7 @@
   },
   "files": [
     "dist",
-    "package.json",
+    "pacakge.json",
     "types",
     "README.md"
   ],
@@ -35,32 +44,72 @@
     "react-dom": "18.2.0"
   },
   "dependencies": {
-    "fast-xml-parser": "^4.2.4",
-    "showdown": "2.1.0",
-    "@polymita/connect": "workspace:^",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.16.0",
     "@polymita/next-connect": "workspace:^",
     "@polymita/next-server": "workspace:^",
     "@polymita/renderer": "workspace:^",
     "@polymita/signal": "workspace:^",
     "@polymita/signal-model": "workspace:^",
     "@prisma/client": "^5.10.2",
-    "next": "14.1.0",
     "prisma": "^5.10.2",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.29.3",
+    "electron": "^32.0.2",
+    "electron-builder": "^25.0.5",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
   "volta": {
     "node": "20.11.1"
+  },
+  "build": {
+    "productName": "polymitabasiclayout",
+    "appId": "com.polymita.polymitabasiclayout",
+    "asar": false,
+    "asarUnpack": "**\\*.{node,dll}",
+    "files": [
+      "dist",
+      "assets",
+      "main",
+      "static",
+      "index.html",
+      "node_modules",
+      "package.json"
+    ],
+    "mac": {
+      "target": {
+        "target": "default",
+        "arch": [
+          "x64"
+        ]
+      },
+      "type": "distribution",
+      "hardenedRuntime": true,
+      "entitlements": "assets/entitlements.mac.plist",
+      "entitlementsInherit": "assets/entitlements.mac.plist",
+      "gatekeeperAssess": false
+    },
+    "directories": {
+      "app": "release/app",
+      "buildResources": "release/app/assets",
+      "output": "release/build"
+    },
+    "extraResources": [
+      "./assets/**"
+    ]
   }
 }
